--- a/index.html
+++ b/index.html
@@ -13,19 +13,7 @@
   </head>
   <body>
 
-    <div id="donutchart">
-      <div class="donut-size">
-        <div v-bind:class="[donut ? 'donut-graph' : 'pie-graph', 'pie-wrapper']">
-          <span class="label">
-              <span>{{percent}}</span><span class="smaller">%</span>
-          </span>
-          <div class="pie" v-bind:style="{clip: pie}">
-            <div class="left-side half-circle" v-bind:style="{transform: leftside}"></div>
-            <div class="right-side half-circle" v-bind:style="{transform: rightside}"></div>
-          </div>
-          <div class="shadow"></div>
-        </div>
-      </div>
+      <simple-donut></simple-donut>
 
       <div id="controls">
         <input v-model="percent" type="number">
